--- a/web/app/index.html
+++ b/web/app/index.html
@@ -29,9 +29,11 @@
     <link rel="stylesheet" href="css/my-bootstrap.css"/>
     <link rel="stylesheet" href="css/app.css"/>
     <script type="text/javascript" src="js/fabric.js"></script>
+    <script type="text/javascript" src="js/lib.js"></script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script type="text/javascript" src="js/prototypes.js"></script>
-    <script type="text/javascript" src="js/classes.js"></script>
+    <script type="text/javascript" src="js/classPanel.js"></script>
+    <script type="text/javascript" src="js/classHoleRect.js"></script>
     <script type="text/javascript" src="js/init.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/events.js"></script>
@@ -49,14 +51,14 @@
         <a class="navbar-brand" href="http://www.quickpanel.sk/app"><img src="./img/qp-logo-80px.png" height="40px" style="vertical-align: top"></a>
         <div class="collapse navbar-toggleable-md" id="navbarResponsive">
             <ul class="nav navbar-nav">
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link" href="javascript:test();">Rectangular</a>-->
-                <!--</li>-->
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:addRectHole();">Rectangular</a>
+                </li>
                 <!--<li class="nav-item">-->
                     <!--<a class="nav-link" href="javascript:;">Circular</a>-->
                 <!--</li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:freehandToggle()">Freehand ON/OFF</a>
+                    <a class="nav-link" href="javascript:freehandToggle()">Marker</a>
                 </li>
 
                 <!--<li class="nav-item active dropdown">-->
