--- a/web/app/index.html
+++ b/web/app/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/my-bootstrap.css"/>
     <link rel="stylesheet" href="css/app.css"/>
     <script type="text/javascript" src="js/fabric.js"></script>
-    <script type="text/javascript" src="js/lib.js"></script>
+    <script type="text/javascript" src="js/classQP.js"></script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script type="text/javascript" src="js/prototypes.js"></script>
     <script type="text/javascript" src="js/classPanel.js"></script>
