Vylepsena kontrola validnych hodnot. Pridane notifikacie.

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -25,10 +25,13 @@
     <script src="ext/tether.min.js"></script>
     <script src="ext/bootstrap.min.js"></script>
 
+    <!--3rd party-->
+    <script type="text/javascript" src="ext/fabric.js"></script>
+    <script type="text/javascript" src="ext/notify.js"></script>
+
     <!-- Application -->
     <link rel="stylesheet" href="css/my-bootstrap.css"/>
     <link rel="stylesheet" href="css/app.css"/>
-    <script type="text/javascript" src="js/fabric.js"></script>
     <script type="text/javascript" src="js/classQP.js"></script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script type="text/javascript" src="js/prototypes.js"></script>
