--- a/web/app/index.html
+++ b/web/app/index.html
@@ -32,11 +32,11 @@
     <!-- Application -->
     <link rel="stylesheet" href="css/my-bootstrap.css"/>
     <link rel="stylesheet" href="css/app.css"/>
-    <script type="text/javascript" src="js/classQP.js"></script>
-    <script type="text/javascript" src="js/constants.js"></script>
+    <script type="text/javascript" src="js/cQP.js"></script>
+    <script type="text/javascript" src="js/app_constants.js"></script>
     <script type="text/javascript" src="js/prototypes.js"></script>
-    <script type="text/javascript" src="js/classPanel.js"></script>
-    <script type="text/javascript" src="js/classHoleRect.js"></script>
+    <script type="text/javascript" src="js/cPanel.js"></script>
+    <script type="text/javascript" src="js/cHoleRect.js"></script>
     <script type="text/javascript" src="js/init.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/events.js"></script>
