--- a/web/app/index.html
+++ b/web/app/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="js/prototypes.js"></script>
     <script type="text/javascript" src="js/cPanel.js"></script>
     <script type="text/javascript" src="js/cHoleRect.js"></script>
+    <script type="text/javascript" src="js/cHoleCirc.js"></script>
     <script type="text/javascript" src="js/init.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/events.js"></script>
@@ -56,6 +57,9 @@
             <ul class="nav navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:addRectHole();">Rectangular</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:addCircHole();">Circular</a>
                 </li>
                 <!--<li class="nav-item">-->
                     <!--<a class="nav-link" href="javascript:;">Circular</a>-->
